--- a/2DTransforms.html
+++ b/2DTransforms.html
@@ -198,7 +198,7 @@
         Matrix Method 02
     </div>
     <div style="display: flex;justify-content:flex-end;padding: 100px 50px;">
-        <a href="file:///C:/Users/salma/Desktop/Asif/3DTransforms.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Next 3DTransforms</a>
+        <a href="/home/asif/Desktop/Advanced-CSS-Practice/3DTransforms.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Next 3DTransforms</a>
     </div>
 </body>
 </html>
