--- a/3DTransforms.html
+++ b/3DTransforms.html
@@ -63,8 +63,8 @@
         3d Z rotate
     </div>
     <div style="display: flex;justify-content:space-between;padding: 100px 50px;">
-        <a href="file:///C:/Users/salma/Desktop/Asif/2DTransforms.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Previous 2DTransforms</a>
-        <a href="file:///C:/Users/salma/Desktop/Asif/Transitions.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Next Transitions</a>
+        <a href="/home/asif/Desktop/Advanced-CSS-Practice/2DTransforms.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Previous 2DTransforms</a>
+        <a href="/home/asif/Desktop/Advanced-CSS-Practice/Transitions.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Next Transitions</a>
     </div>
 </body>
 </html>
