--- a/Transitions.html
+++ b/Transitions.html
@@ -156,5 +156,9 @@
     <button class="transition-transformation">C</button>
     <button class="transition-transformation">D</button>
     
+    <div style="display: flex;justify-content:space-between;padding: 100px 50px;">
+        <a href="/home/asif/Desktop/Advanced-CSS-Practice/3DTransforms.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Previous 3DTransforms</a>
+        <a href="/home/asif/Desktop/Advanced-CSS-Practice/Animations.html" style="font-size: 30px;color: black;font-weight: 700;text-decoration: red;">Next Animations</a>
+    </div>
 </body>
 </html>
